--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1>Cockpit Documentation</h1>
+# Cockpit Documentation
+## Header 2
+### Header 3
 <p>
     Here we are trying to create a new method to document the technical explanation!
 </p>
